--- a/src/assets/css/Proyectos.css
+++ b/src/assets/css/Proyectos.css
@@ -22,7 +22,7 @@
     border-radius: 30px;
     text-align: justify;
     margin: 1rem 6rem 3rem 6rem;
-    min-height: calc(100vh - 6rem); /* Establecer una altura mínima relativa a la altura de la ventana del navegador */
+    min-height: calc(100vh - 6rem);
     padding: 0rem 3rem 1rem 3rem;
 }
 .projects-text {
