--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -241,11 +241,11 @@
     text-shadow: 0px 0px 10px #ff66c4;
 }
 .date {
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 100;
     font-style: italic;
     color: #ffbd59;
-    margin-bottom: 0;
+    margin-bottom: 5px;
 }
 .info {
     font-size: 15px;
@@ -605,7 +605,7 @@
     .box-about {
         margin: 1rem auto;
         width: 80%;
-        padding: 3rem 1rem;
+        padding: 3rem 1rem 0 1rem;
     }
     .section-btn-cv {
         background-color: #ffbd59;
@@ -619,7 +619,7 @@
     .box-stack {
         margin: 1rem auto;
         width: 90%;
-        padding: 3rem 1rem;
+        padding: 3rem 1rem 0 1rem;
     }
 
     /*seccion estudios*/
@@ -629,7 +629,7 @@
     .box-studies {
         margin: 1rem auto;
         width: 80%;
-        padding: 3rem 1rem;
+        padding: 3rem 1rem 0 1rem;
     }
 
     /*seccion hobbies*/
@@ -657,7 +657,7 @@
     .box-cert {
         margin: 0rem auto;
         width: 90%;
-        padding: 3rem 1rem;
+        padding: 3rem 1rem 0 1rem;
     }
     .box-cert img {
         width: 90%;
@@ -668,7 +668,7 @@
     .box-projects {
         margin: 1rem auto;
         width: 90%;
-        padding: 3rem 1rem;
+        padding: 3rem 1rem 0 1rem;
     }
 
     .content-projects {
