--- a/src/assets/css/RandomPokemon.css
+++ b/src/assets/css/RandomPokemon.css
@@ -70,3 +70,16 @@
     text-align: center;
     margin-bottom: 2px;
 }
+
+/*RESPONSIVE*/
+@media screen and (min-width: 280px) and (max-width: 768px) {
+    .img-pokemon {
+        width: 100px;
+    }
+    .box-pokemon {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding: 2rem;
+    }
+}
