--- a/src/assets/css/RandomPokemon.css
+++ b/src/assets/css/RandomPokemon.css
@@ -35,17 +35,16 @@
 
 .btn-pokemon:hover {
     text-shadow: 0 0 10px #ff66c4;
-    text-decoration: underline;
 }
 .name-pokemon {
     font-family: "Bebas Neue", sans-serif;
-    font-size: 35px;
+    font-size: 40px;
     font-weight: 400;
     color: #ffbd59;
     border-color: #d67eee;
     text-align: center;
     margin: 0;
-    animation: pokemonbtn 3s infinite;
+    animation: pokemonbtn 2.5s ease-in infinite;
 }
 
 @keyframes pokemonbtn {
@@ -67,19 +66,31 @@
     color: #ffbd59;
     border-color: #d67eee;
     text-shadow: 0px 0px 10px #ff66c4;
-    text-align: center;
+    text-align: start;
     margin-bottom: 2px;
 }
 
 /*RESPONSIVE*/
 @media screen and (min-width: 280px) and (max-width: 768px) {
     .img-pokemon {
-        width: 100px;
+        width: 180px;
     }
     .box-pokemon {
         display: flex;
         flex-direction: column;
         width: 100%;
         padding: 2rem;
+    }
+    .name-pokemon {
+        font-size: 25px;
+    }
+
+    .title-pokemon {
+        font-size: 20px;
+    }
+    .btn-pokemon {
+        font-size: 15px;
+        height: 25px;
+        width: 70px;
     }
 }
