--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -37,7 +37,7 @@
     color: #d486ea;
     margin-top: 1.5rem;
     position: relative;
-    animation: undertitle 3s infinite alternate;
+    animation: undertitle 3s infinite;
 }
 
 @keyframes undertitle {
@@ -45,7 +45,7 @@
         text-shadow: 0 0 10px rgba(83, 83, 83, 0.9);
     }
     50% {
-        text-shadow: 0 0 50px rgba(83, 83, 83, 0.87);
+        text-shadow: 0 0 90px rgba(83, 83, 83, 0.87);
     }
     100% {
         text-shadow: 0 0 10px rgba(83, 83, 83, 0.99);
@@ -133,7 +133,7 @@
     cursor: pointer;
     width: 100%;
     margin: 3rem 0 1rem 0;
-    padding: 1rem 3rem;
+    padding: 1rem;
 }
 
 .section-btn-cv {
@@ -147,9 +147,9 @@
     border-radius: 10px;
     border-style: none;
     cursor: pointer;
-    box-shadow: 0px 0px 2px #545454;
     transition: border-color 0.3s, box-shadow 0.3s;
     text-align: center;
+    box-shadow: 0 0 10px #ffbd59;
 }
 .section-btn-cv:hover {
     border-color: #ffbd59;
@@ -460,7 +460,7 @@
 
     .btn-links {
         width: 100%;
-        padding: 1rem;
+        padding: 0rem;
     }
 
     /*seccion sobre mi*/
@@ -560,7 +560,7 @@
         height: 70px;
     }
     .under-title {
-        font-size: 20px;
+        font-size: 21px;
         letter-spacing: 3px;
         margin-top: 0.5rem;
     }
@@ -571,7 +571,7 @@
 
     .btn-links {
         width: 100%;
-        padding: 1rem;
+        padding: 0rem;
     }
 
     /*seccion sobre mi*/
