--- a/src/assets/css/RandomPokemon.css
+++ b/src/assets/css/RandomPokemon.css
@@ -5,9 +5,15 @@
 .container-pokemon {
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
 }
+.pokemon-items {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    position: relative;
+}
+
 .box-pokemon {
     display: flex;
     width: 600px;
@@ -31,6 +37,7 @@
     box-shadow: 0px 0px 5px #545454;
     transition: border-color 0.3s, box-shadow 0.3s;
     text-align: center;
+    margin: 0px 30px;
 }
 
 .btn-pokemon:hover {
@@ -44,18 +51,18 @@
     border-color: #d67eee;
     text-align: center;
     margin: 0;
-    animation: pokemonbtn 2.5s ease-in infinite;
+    animation: pokemonbtn 3s ease-in infinite;
 }
 
 @keyframes pokemonbtn {
     0% {
-        text-shadow: 0 0 10px rgba(81, 112, 255, 0.6);
+        text-shadow: 0 0 10px rgba(83, 83, 83, 0.9);
     }
     50% {
-        text-shadow: 0 0 50px rgba(81, 112, 255, 0.87);
+        text-shadow: 0 0 90px rgba(83, 83, 83, 0.87);
     }
     100% {
-        text-shadow: 0 0 10px rgba(81, 112, 255, 0.99);
+        text-shadow: 0 0 10px rgba(83, 83, 83, 0.99);
     }
 }
 
@@ -67,13 +74,21 @@
     border-color: #d67eee;
     text-shadow: 0px 0px 10px #ff66c4;
     text-align: start;
-    margin-bottom: 2px;
+    margin: 0;
 }
 
 /*RESPONSIVE*/
+@media screen and (min-width: 768px) and (max-width: 996px) {
+    .box-pokemon {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+}
 @media screen and (min-width: 280px) and (max-width: 768px) {
     .img-pokemon {
         width: 180px;
+        margin-top: 1rem;
     }
     .box-pokemon {
         display: flex;
@@ -92,5 +107,6 @@
         font-size: 15px;
         height: 25px;
         width: 70px;
+        margin: 0.5rem 0rem;
     }
 }
