--- a/src/assets/css/RandomPokemon.css
+++ b/src/assets/css/RandomPokemon.css
@@ -1,5 +1,17 @@
 .img-pokemon {
     width: 300px;
+    animation: float 3s ease-in-out infinite;
+}
+@keyframes float {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-20px);
+    }
+    100% {
+        transform: translateY(0);
+    }
 }
 
 .pokemon-items {
