--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -135,6 +135,21 @@
     margin: 3rem 0 1rem 0;
     padding: 1rem;
 }
+@keyframes shadowPulse {
+    0% {
+        filter: drop-shadow(0 0 10px rgba(255, 189, 89, 0.8));
+    }
+    50% {
+        filter: drop-shadow(0 0 40px rgba(255, 200, 0, 1));
+    }
+    100% {
+        filter: drop-shadow(0 0 10px rgba(255, 189, 89, 0.8));
+    }
+}
+
+.btn-links a > svg {
+    animation: shadowPulse 4s infinite;
+}
 
 .section-btn-cv {
     background-color: #ffbd59;
@@ -363,6 +378,27 @@
     color: #ffbd59;
     border-color: #d67eee;
     text-shadow: 0px 0px 10px #ff66c4;
+}
+
+/*Botón scroll top*/
+.btn-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #ffbd59;
+    color: #545454;
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 15px;
+    border-radius: 50%;
+    border-style: none;
+    cursor: pointer;
+    box-shadow: 0px 0px 5px #545454;
+    transition: border-color 0.3s, box-shadow 0.3s;
+    text-align: center;
+    z-index: 1000;
 }
 
 /*RESPONSIVE*/
