--- a/src/assets/css/Footer.css
+++ b/src/assets/css/Footer.css
@@ -13,6 +13,7 @@
 }
 .input-footer {
     font-size: 12px;
+    font-weight: 400;
     font-family: "Montserrat", sans-serif;
     background-color: #ffbd59;
     border-style: none;
@@ -60,6 +61,13 @@
         width: 100%;
         text-align: center;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+    }
+    .input-footer {
+        font-size: 10px;
+        width: 200px;
+    }
+    .btn-footer {
+        width: 40px;
     }
 }
