--- a/src/assets/css/NotFound.css
+++ b/src/assets/css/NotFound.css
@@ -25,10 +25,11 @@
     background-color: transparent;
     border-style: none;
     border: 1.5px solid #ffbd59;
-    border-radius: 10px;
+    border-radius: 50px;
     text-align: center;
     transition: border-color 0.3s, box-shadow 0.3s;
-    padding: 0.5rem 1rem 0.5rem 0.5rem;
+    width: 100px;
+    height: 40px;
 }
 .btn-404:hover {
     box-shadow: 0px 0px 8px #ffbd59;
