--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -8,7 +8,7 @@
 .names-perfil {
     display: flex;
     flex-direction: column;
-    height: 400px;
+    height: 200px;
 }
 
 .names-perfil h1 {
@@ -31,15 +31,15 @@
 
 .under-title {
     font-family: "Bebas Neue", sans-serif;
-    font-size: 58px;
+    font-size: 53px;
     font-weight: 400;
-    letter-spacing: 5px;
+    letter-spacing: 6px;
     text-align: center;
     color: #d486ea;
     margin-top: 1.5rem;
     white-space: nowrap;
     overflow: hidden;
-    animation: blink-caret 0.75s step-end infinite;
+    animation: step-end infinite;
 }
 
 .image {
@@ -273,7 +273,7 @@
     background-color: transparent;
     color: #ffbd59;
     height: 25px;
-    width: 100px;
+    width: 130px;
     cursor: pointer;
     text-align: center;
     transition: border-color 0.3s, box-shadow 0.3s;
@@ -651,7 +651,8 @@
         background-color: #ffbd59;
         color: #545454;
         height: 35px;
-        width: 100%;
+        line-height: 5px;
+        width: 105px;
         margin: 5px;
     }
 
@@ -726,8 +727,9 @@
         box-sizing: content-box;
     }
     .contenedor-card .box-btn {
-        height: 35px;
-        width: 70px;
+        height: 30px;
+        line-height: 5px;
+        width: 100px;
         margin: 5px;
     }
     .btn-sites {
