--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin: 5rem 3rem;
+    margin: 5rem 3rem 12rem 3rem;
 }
 .names-perfil {
     display: flex;
