--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -675,6 +675,9 @@
         width: 80%;
         padding: 3rem 1rem 0 1rem;
     }
+    .btn-more {
+        line-height: 24px;
+    }
 
     /*seccion hobbies*/
     .box-hobbies {
