--- a/src/assets/styles/CaruselHobbies.css
+++ b/src/assets/styles/CaruselHobbies.css
@@ -10,12 +10,13 @@ h5 {
 }
 
 .custom-carousel-item img {
-    width: 300px;
-    height: 230px;
+    width: 350px;
+    height: 350px;
     object-fit: cover;
     display: block;
     margin: 0.4rem auto;
-    box-shadow: 0 0 2px #545454;
+    box-shadow: 0 0 1px #545454;
+    border-radius: 50%;
 }
 
 /*RESPONSIVE*/
@@ -26,16 +27,17 @@ h5 {
 }
 @media screen and (min-width: 768px) and (max-width: 996px) {
     .carousel-item img {
-        width: 250px;
-        height: 200px;
+        width: 280px;
+        height: 280px;
     }
 }
 
 @media screen and (min-width: 280px) and (max-width: 768px) {
     .custom-carousel-item img {
-        width: 250px;
-        height: 200px;
+        width: 240px;
+        height: 240px;
         object-fit: cover;
         display: block;
+        border-radius: 50%;
     }
 }
