--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -45,7 +45,7 @@
 .image {
     width: 350px;
     border-radius: 50%;
-    box-shadow: 0 0 6px #545454;
+    box-shadow: 0 0 3px #545454;
 }
 
 .image-perfil {
@@ -372,7 +372,6 @@
 
 .box-content-projects {
     width: 100%;
-    height: 250px;
     box-sizing: border-box;
     border-radius: 8px;
     cursor: pointer;
@@ -475,8 +474,7 @@
         margin: 3rem;
     }
     .box-content-projects {
-        width: 350px;
-        height: 190px;
+        width: 100%;
         box-sizing: content-box;
     }
 }
@@ -584,7 +582,6 @@
 
     .box-content-projects {
         width: 100%;
-        height: 100%;
         box-sizing: content-box;
     }
 }
@@ -730,7 +727,6 @@
 
     .box-content-projects {
         width: 100%;
-        height: 170px;
         box-sizing: content-box;
     }
     .contenedor-card .box-btn {
