--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -400,6 +400,12 @@
     border-color: #d67eee;
     text-shadow: 0px 0px 10px #ff66c4;
 }
+.box-btn-more {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+}
 
 /*Botón scroll top*/
 .btn-top {
