commit views projects

--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -410,9 +410,9 @@
     font-family: "Bebas Neue", sans-serif;
     font-size: 15px;
     font-weight: 500;
-    color: #545454;
-    border-color: #545454;
-    text-shadow: 0px 0px 2px #5170ff;
+    color: #ffbd59;
+    border-color: #ff66c4;
+    text-shadow: 0px 0px 2px #ff66c4;
     width: 100%;
 }
 
