--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,4 +1,5 @@
-/*footer*/
+/*Footer*/
+
 .footer {
     display: flex;
     flex-direction: row;
@@ -23,8 +24,6 @@
     width: 250px;
     height: 30px;
     color: #5170ff;
-    margin: 0 2px;
-    /* box-shadow: 0px 0px 6px #ffbd59; */
 }
 .btn-footer {
     background-color: #ffbd59;
