--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,4 +1,5 @@
-/*header*/
+/*Header*/
+
 .box-perfil {
     display: flex;
     justify-content: space-evenly;
@@ -228,7 +229,7 @@
 
 /*seccion estudios*/
 .box-studies {
-    border-radius: 30px;
+    border-radius: 20px;
     padding: 5rem 3rem;
     text-align: justify;
     margin: 1rem;
@@ -256,9 +257,10 @@
     color: #ffbd59;
     text-shadow: 0px 0px 5px #ffbd59;
     margin-top: 1rem; 
-    border-radius: 10px;
     padding: 1rem;
     background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    box-shadow: 0px 0px 4px #ffbd59;
 }
 .info-2 {
     display: flex;
@@ -317,18 +319,14 @@
     align-items: center;
     margin: 1rem;
     padding: 5rem 3rem;
-    color: #545454;
-    
     border-radius: 20px;
-    box-shadow: 0px 0px 5px #545454;
+    box-shadow: 0px 0px 4px #ffbd59;
     transition: border-color 0.3s, box-shadow 0.3s;
-
-      width: 300px;
+    width: 300px;
     height: auto;
-  
-   
-   
+    background-color: rgba(0, 0, 0, 0.1);
 }
+
 .box-projects {
     border-radius: 30px;
     text-align: justify;
@@ -435,7 +433,7 @@
     background: linear-gradient(to bottom, rgb(148, 95, 189), rgba(0, 0, 0, 0));
     z-index: 1;
     border-radius: 20px;
-    border: 2px solid #ffbd59;
+    border: 1.5px solid #ffbd59;
 }
 
 .box-content-projects {
@@ -664,12 +662,9 @@
 
     /*seccion proyectos*/
     .skeleton-card{
-       
-   
-     margin: 1rem auto;
-         height: 380px;
-    width: 380px;
-       
+        margin: 1rem auto;
+        height: 380px;
+        width: 380px;
     }
     .box-projects {
         margin: 1rem auto;
