--- a/src/styles/FormContact.css
+++ b/src/styles/FormContact.css
@@ -1,7 +1,7 @@
 /*Página form*/
 
 .title-form {
-    font-family: "Bebas Neue", sans-serif;
+    font-family: 'Bebas Neue', sans-serif;
     font-size: 50px;
     font-weight: 500;
     text-align: center;
@@ -24,6 +24,27 @@
     padding: 1rem 6rem;
     text-align: justify;
     width: 60%;
+
+    @media (280px <= width <= 768px) {
+        margin: auto;
+        padding: 1rem 3rem;
+        text-align: justify;
+        width: 100%;
+    }
+
+    @media (768px <= width <= 996px) {
+        margin: auto;
+        padding: 1rem 6rem;
+        text-align: justify;
+        width: 100%;
+    }
+
+    @media (996px <= width <= 1080px) {
+        margin: auto;
+        padding: 1rem 6rem;
+        text-align: justify;
+        width: 100%;
+    }
 }
 
 .box-form {
@@ -31,6 +52,24 @@
     margin: 3rem auto;
     text-align: center;
     overflow: hidden;
+
+    @media (280px <= width <= 768px) {
+        height: 100%;
+        margin: 1rem auto;
+        width: 90%;
+    }
+
+    @media (768px <= width <= 996px) {
+        height: 100%;
+        margin: 3rem auto;
+        width: 80%;
+    }
+
+    @media (996px <= width <= 1080px) {
+        height: 100%;
+        margin: 3rem auto;
+        width: 80%;
+    }
 }
 
 .box-form iframe {
@@ -38,58 +77,16 @@
     min-height: 40vh;
     border: none;
     border-radius: 30px;
-}
 
-/*RESPONSIVE*/
-@media screen and (min-width: 996px) and (max-width: 1080px) {
-    .box-form {
-        min-height: 100%;
-        margin: 3rem auto;
-        width: 80%;
-    }
-    .box-form iframe {
-        width: 100%;
-        height: 60vh;
-    }
-    .text-form {
-        margin: auto;
-        padding: 1rem 6rem;
-        text-align: justify;
-        width: 100%;
-    }
-}
-@media screen and (min-width: 768px) and (max-width: 996px) {
-    .box-form {
-        min-height: 100%;
-        margin: 3rem auto;
-        width: 80%;
-    }
-    .box-form iframe {
-        width: 100%;
-        height: 30vh;
-    }
-    .text-form {
-        margin: auto;
-        padding: 1rem 6rem;
-        text-align: justify;
-        width: 100%;
-    }
-}
-
-@media screen and (min-width: 280px) and (max-width: 768px) {
-    .box-form {
-        height: 100%;
-        margin: 1rem auto;
-        width: 90%;
-    }
-    .box-form iframe {
-        width: 100%;
+    @media (280px <= width <= 768px) {
         height: 40vh;
     }
-    .text-form {
-        margin: auto;
-        padding: 1rem 3rem;
-        text-align: justify;
-        width: 100%;
+
+    @media (768px <= width <= 996px) {
+        height: 30vh;
+    }
+
+    @media (996px <= width <= 1080px) {
+        height: 60vh;
     }
 }
