--- a/src/styles/Hobbies.css
+++ b/src/styles/Hobbies.css
@@ -1,4 +1,4 @@
-/*Imagen hobbies*/
+/*Hobbies*/
 
 .image-container {
     position: relative;
@@ -7,6 +7,21 @@
     overflow: hidden;
     border-radius: 50%;
     margin: 0 auto;
+
+    @media (280px <= width <= 768px) {
+        width: 250px;
+        height: 250px;
+    }
+
+    @media (768px <= width <= 996px) {
+        width: 350px;
+        height: 350px;
+    }
+
+    @media (996px <= width <= 1200px) {
+        width: 400px;
+        height: 400px;
+    }
 }
 
 .background-image {
@@ -28,7 +43,6 @@
     animation-delay: 8s;
 }
 
-
 @keyframes fade {
     0%, 40% {
         opacity: 0;
@@ -40,26 +54,4 @@
         opacity: 0;
     }
 }
-/*RESPONSIVE*/
-@media screen and (min-width: 996px) and (max-width: 1080px) {
-   .image-container {
-    width: 250px;
-    height: 250px;
-   
-}
-}
-@media screen and (min-width: 768px) and (max-width: 996px) {
-      .image-container {
-    width: 250px;
-    height: 250px;
-   
-}
-}
 
-@media screen and (min-width: 280px) and (max-width: 768px) {
-       .image-container {
-    width: 250px;
-    height: 250px;
-   
-}
-}
