--- a/src/styles/NotFound.css
+++ b/src/styles/NotFound.css
@@ -16,7 +16,12 @@
     text-shadow: 0px 0px 10px #ff66c4;
     text-align: center;
     margin: 1.5rem 0;
+
+    @media ( 280px <= width <= 768px ) {
+    font-size: 40px;
+    }
 }
+
 .btn-404 {
     font-family: "Bebas Neue", sans-serif;
     font-size: 20px;
@@ -35,16 +40,3 @@
     box-shadow: 0px 0px 8px #ffbd59;
 }
 
-/*RESPONSIVE*/
-@media screen and (min-width: 280px) and (max-width: 768px) {
-    .title-404 {
-        font-family: "Bebas Neue", sans-serif;
-        font-size: 40px;
-        font-weight: 500;
-        color: #ffbd59;
-        border-color: #d67eee;
-        text-shadow: 0px 0px 10px #ff66c4;
-        text-align: center;
-        margin: 1.5rem 0;
-    }
-}
