--- a/src/styles/Proyectos.css
+++ b/src/styles/Proyectos.css
@@ -7,6 +7,11 @@
     font-size: 12px;
     width: 100%;
     padding-bottom: 3rem;
+
+    @media (280px <= width <= 768px) {
+        justify-content: center;
+        font-size: 12px;
+    }
 }
 
 .btn-skills button {
@@ -19,12 +24,21 @@
     margin: 5px;
 }
 .box-proyects {
-    /* background-color: rgba(0, 0, 0, 0.15); */
     border-radius: 30px;
     text-align: justify;
     margin: 1rem 6rem 3rem 6rem;
     min-height: calc(100vh - 6rem);
     padding: 0rem 3rem 1rem 3rem;
+
+    @media (996px <= width <= 1080px) {
+        margin: 3rem;
+    }
+    @media (768px <= width <= 996px) {
+        margin: 3rem;
+    }
+    @media (280px <= width <= 768px) {
+        margin: 1rem;
+    }
 }
 
 .projects-text {
@@ -34,7 +48,7 @@
     text-shadow: 0px 0px 8px #ffbd59;
 }
 .projects-title {
-    font-family: "Bebas Neue", sans-serif;
+    font-family: 'Bebas Neue', sans-serif;
     font-size: 30px;
     font-weight: 400;
     color: #ffbd59;
@@ -53,6 +67,12 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 2rem;
+
+    @media (280px <= width <= 768px) {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
 }
 .projects-video {
     display: flex;
@@ -62,6 +82,12 @@
 .iframe-video {
     width: 699px;
     height: 415px;
+
+    @media (280px <= width <= 768px) {
+        width: 300px;
+        height: 215px;
+        margin: 0rem 0rem 2rem 0;
+    }
 }
 
 .btn-projects {
@@ -74,7 +100,7 @@
     color: #545454;
     height: 40px;
     width: 100px;
-    font-family: "Bebas Neue", sans-serif;
+    font-family: 'Bebas Neue', sans-serif;
     font-size: 15px;
     border-radius: 50px;
     border-style: none;
@@ -88,43 +114,8 @@
 .btn-home {
     text-align: center;
     margin: 3rem 0 5rem 0;
-}
 
-/*RESPONSIVE*/
-@media screen and (min-width: 996px) and (max-width: 1080px) {
-    .box-proyects {
-        margin: 3rem;
-    }
-}
-
-@media screen and (min-width: 768px) and (max-width: 996px) {
-    .box-proyects {
-        margin: 3rem;
-    }
-}
-
-@media screen and (min-width: 280px) and (max-width: 768px) {
-    .box-proyects {
-        margin: 1rem;
-    }
-    .btn-skills {
-        justify-content: center;
-        font-size: 12px;
-    }
-
-    .btn-home {
+    @media (280px <= width <= 768px) {
         margin-top: 2rem;
-        text-align: center;
-    }
-
-    .projects-views {
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: 2rem;
-    }
-    .iframe-video {
-        width: 300px;
-        height: 215px;
-        margin: 0rem 0rem 2rem 0;
     }
 }
