--- a/src/styles/RandomPokemon.css
+++ b/src/styles/RandomPokemon.css
@@ -1,12 +1,68 @@
-.img-pokemon-container {
-    position: relative;
-    width: 300px;
-    display: inline-block; 
+.name-pokemon {
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 40px;
+    font-weight: 400;
+    color: #ffbd59;
+    border-color: #d67eee;
+    text-align: center;
+    margin-top: 3rem;
+    animation: pokemonbtn 3s ease-in infinite;
+
+    @media (280px <= width <= 768px) {
+        font-size: 25px;
+    }
+}
+
+@keyframes pokemonbtn {
+    0% {
+        text-shadow: 0 0 10px rgba(241, 224, 109, 0.9);
+    }
+    50% {
+        text-shadow: 0 0 30px rgba(241, 224, 109, 0.9);
+    }
+    100% {
+        text-shadow: 0 0 10px rgba(241, 224, 109, 0.9);
+    }
+}
+
+.title-pokemon {
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 25px;
+    font-weight: 400;
+    color: #ffbd59;
+    border-color: #d67eee;
+    text-shadow: 0px 0px 10px #ff66c4;
+    text-align: start;
+    margin: 0;
+
+    @media (280px <= width <= 768px) {
+        font-size: 20px;
+    }
 }
 
 .img-pokemon {
     width: 100%;
     animation: float 3s ease-in-out infinite;
+    
+    @media (280px <= width <= 768px) {
+        width: 180px;
+        margin-top: 1rem;
+    }
+}
+
+.img-pokemon-container {
+    position: relative;
+    width: 300px;
+    display: inline-block;
+
+    @media (280px <= width <= 768px) {
+        width: 100%;
+    }
+
+    @media (768px <= width <= 996px) {
+        width: 380px;
+        
+    }
 }
 
 .img-pokemon-container::before {
@@ -25,7 +81,8 @@
 }
 
 @keyframes float {
-    0%, 100% {
+    0%,
+    100% {
         transform: translateY(0);
     }
     50% {
@@ -34,14 +91,14 @@
 }
 
 @keyframes shadow-float {
-    0%, 100% {
+    0%,
+    100% {
         transform: translateX(-50%) scale(1);
     }
     50% {
         transform: translateX(-50%) scale(0.8);
     }
 }
-
 
 .pokemon-items {
     display: flex;
@@ -56,10 +113,18 @@
     width: 100%;
     justify-content: space-evenly;
     align-items: center;
+
+    @media (280px <= width <= 768px) {
+        padding: 4rem 0;
+    }
+
+    @media (768px <= width <= 996px) {
+        padding: 4rem 0;
+    }
 }
 
 .btn-pokemon {
-    font-family: "Bebas Neue", sans-serif;
+    font-family: 'Bebas Neue', sans-serif;
     font-size: 15px;
     font-weight: 400;
     border-style: none;
@@ -72,75 +137,8 @@
     cursor: pointer;
     transition: border-color 0.3s, box-shadow 0.3s;
     text-align: center;
-}
 
-.btn-pokemon:hover {
-    border-color: #ffbd59;
-    box-shadow: 0px 0px 8px #ffbd59;
-}
-.name-pokemon {
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 40px;
-    font-weight: 400;
-    color: #ffbd59;
-    border-color: #d67eee;
-    text-align: center;
-    margin-top: 3rem;
-    animation: pokemonbtn 3s ease-in infinite;
-    
-}
-
-@keyframes pokemonbtn {
-    0% {
-        text-shadow: 0 0 10px rgba(241, 224, 109, 0.9);
-    }
-    50% {
-        text-shadow: 0 0 30px rgba(241, 224, 109, 0.9);
-    }
-    100% {
-        text-shadow: 0 0 10px rgba(241, 224, 109, 0.9);
-    }
-}
-
-.title-pokemon {
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 25px;
-    font-weight: 400;
-    color: #ffbd59;
-    border-color: #d67eee;
-    text-shadow: 0px 0px 10px #ff66c4;
-    text-align: start;
-    margin: 0;
-}
-
-/*RESPONSIVE*/
-@media screen and (min-width: 768px) and (max-width: 996px) {
-    .box-pokemon {
-        width: 100%;
-    }
-    .img-pokemon-container {
-    width: 380px;
-    }
-}
-@media screen and (min-width: 280px) and (max-width: 768px) {
-    .img-pokemon {
-        width: 180px;
-        margin-top: 1rem;
-    }
-    .box-pokemon {
-        padding: 4rem 0;
-    }
-    .img-pokemon-container {
-    width: 100%;
-    }
-    .name-pokemon {
-        font-size: 25px;
-    }
-
-    .title-pokemon {
-        font-size: 20px;
-    }
-    .btn-pokemon {
+    @media (280px <= width <= 768px) {
         font-size: 15px;
         height: 25px;
         width: 70px;
@@ -148,3 +146,9 @@
         line-height: 26px;
     }
 }
+
+.btn-pokemon:hover {
+    border-color: #ffbd59;
+    box-shadow: 0px 0px 8px #ffbd59;
+}
+
