--- a/src/styles/FormContact.css
+++ b/src/styles/FormContact.css
@@ -22,7 +22,7 @@
     text-shadow: 0px 0px 8px #ffbd59;
     margin: auto;
     padding: 1rem 6rem;
-    text-align: justify;
+    text-align: center;
     width: 60%;
 
     @media (280px <= width <= 768px) {
